# niftyled-gstreamer

./: ChangeLog  Makefile.am  README  README.md  configure.ac
gentoo/media-plugins/gst-plugins-niftyled/: gst-plugins-niftyled-9999.ebuild.in  metadata.xml
src/: Makefile.am  gstniftyled.c  gstniftyled.h
